binrw/tests/ui/derive_binread_with_temp.rs
use binrw::BinRead;

#[derive(BinRead)]
struct Foo {
    #[br(temp)]
    a: u8,
}

fn main() {}
